--- a/Inline-center.css
+++ b/Inline-center.css
@@ -1,8 +1,10 @@
 .align {
+  display: inline-block;
   line-height: 100vh;
   verticle-align: middle;
-  margin-inline: auto;
-  height: 250px;
+  text-align: center;
+  height: 100vh;
+  width: 100vw;
   border: solid 1px green;
   color: red;
 }
