--- a/Inline-center.css
+++ b/Inline-center.css
@@ -1,9 +1,9 @@
 .align {
   display: inline-block;
-  line-height: 100vh;
+  line-height: 250px;
   verticle-align: middle;
   text-align: center;
-  height: 100%;
+  height: 250px;
   width: 100vw;
   border: solid 1px green;
   color: red;
