--- a/Inline-center.css
+++ b/Inline-center.css
@@ -3,7 +3,7 @@
   line-height: 100vh;
   verticle-align: middle;
   text-align: center;
-  height: 250px;
+  height: 100vh;
   width: 100vw;
   border: solid 1px green;
   color: red;
