--- a/Inline-center.css
+++ b/Inline-center.css
@@ -7,5 +7,9 @@
   height: 200px;
   width: 100vw;
   border: solid 1px green;
-  color: yellow;
+  color: green;
+}
+h1 {
+  display: inline-block;
+  line-height: 100vh;
 }
