--- a/Inline-center.css
+++ b/Inline-center.css
@@ -3,7 +3,7 @@
   display: grid;
   place-items: center;
   text-align: center;
-  height: 200px;
+  height: 100vh;
   width: 100vw;
   border: solid 1px green;
   color: green;
