--- a/Inline-center.css
+++ b/Inline-center.css
@@ -3,10 +3,10 @@
   display: grid;
   place-items: center;
   text-align: center;
-  height: 100vh;
-  width: 100vw;
+  height: calc(100vh + 1);
+  width: calc(100vw - 1);
   border: solid 1px green;
-  color: pink;
+  color: blue;
   scroll:none;
 }
 h1 {
